--- a/Client/src/main/resources/view.fxml
+++ b/Client/src/main/resources/view.fxml
@@ -4,164 +4,180 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.mi.client.Controller">
-    <HBox alignment="CENTER" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" HBox.hgrow="ALWAYS">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="de.mi.client.controller.Controller">
+    <HBox alignment="CENTER" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0"
+          AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox maxWidth="400.0" minWidth="-Infinity" prefWidth="262.0" spacing="5.0" HBox.hgrow="ALWAYS">
             <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </padding>
             <Label text="Book Filter">
                 <font>
-                    <Font name="System Bold" size="24.0" />
+                    <Font name="System Bold" size="24.0"/>
                 </font>
             </Label>
-            <Separator prefWidth="200.0" />
+            <Separator prefWidth="200.0"/>
             <Label text="Title Search">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <TextField fx:id="titleSearch" promptText="Keyword to search in book titles" />
-            <Separator opacity="0.0" prefWidth="200.0" />
+            <TextField fx:id="titleSearch" promptText="Keyword to search in book titles"/>
+            <Separator opacity="0.0" prefWidth="200.0"/>
             <Label text="Author Search">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <TextField fx:id="authorSearch" promptText="Keyword to search in book author names" />
-            <Separator layoutX="25.0" layoutY="133.0" opacity="0.0" prefWidth="200.0" />
+            <TextField fx:id="authorSearch" promptText="Keyword to search in book author names"/>
+            <Separator layoutX="25.0" layoutY="133.0" opacity="0.0" prefWidth="200.0"/>
             <Label text="Year range">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
             <HBox alignment="CENTER_LEFT" layoutX="25.0" layoutY="226.0" spacing="5.0">
-                <Label text="From" textFill="GREY" />
-                <TextField fx:id="minYear" prefHeight="25.0" prefWidth="62.0" promptText="min year" />
-                <Label text="to" textFill="GREY" />
-                <TextField fx:id="maxYear" prefHeight="25.0" prefWidth="62.0" promptText="max year" />
+                <Label text="From" textFill="GREY"/>
+                <TextField fx:id="minYear" prefHeight="25.0" prefWidth="62.0" promptText="min year"/>
+                <Label text="to" textFill="GREY"/>
+                <TextField fx:id="maxYear" prefHeight="25.0" prefWidth="62.0" promptText="max year"/>
             </HBox>
-            <Separator layoutX="25.0" layoutY="329.0" opacity="0.0" prefWidth="200.0" />
+            <Separator layoutX="25.0" layoutY="329.0" opacity="0.0" prefWidth="200.0"/>
             <Label text="Page range">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
             <HBox alignment="CENTER_LEFT" spacing="5.0">
                 <VBox.margin>
-                    <Insets />
+                    <Insets/>
                 </VBox.margin>
-                <Label text="From" textFill="GREY" />
-                <TextField fx:id="minPages" prefHeight="25.0" prefWidth="72.0" promptText="min pages" />
-                <Label text="to" textFill="GREY" />
-                <TextField fx:id="maxPages" prefHeight="25.0" prefWidth="72.0" promptText="max pages" />
+                <Label text="From" textFill="GREY"/>
+                <TextField fx:id="minPages" prefHeight="25.0" prefWidth="72.0" promptText="min pages"/>
+                <Label text="to" textFill="GREY"/>
+                <TextField fx:id="maxPages" prefHeight="25.0" prefWidth="72.0" promptText="max pages"/>
             </HBox>
-            <Separator layoutX="25.0" layoutY="201.0" opacity="0.0" prefWidth="200.0" />
+            <Separator layoutX="25.0" layoutY="201.0" opacity="0.0" prefWidth="200.0"/>
             <Label text="Subfields">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <ScrollPane fx:id="filterSubfields" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <ScrollPane fx:id="subfieldsFilterPane" fitToWidth="true" VBox.vgrow="ALWAYS">
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+            </ScrollPane>
             <Separator prefWidth="200.0">
                 <VBox.margin>
-                    <Insets bottom="5.0" top="5.0" />
+                    <Insets bottom="5.0" top="5.0"/>
                 </VBox.margin>
             </Separator>
             <HBox spacing="15.0">
-                <Button mnemonicParsing="false" onAction="#applyFilter" text="Apply" />
-                <Button mnemonicParsing="false" onAction="#clearFilter" text="Clear" />
+                <Button mnemonicParsing="false" onAction="#applyFilter" text="Apply"/>
+                <Button mnemonicParsing="false" onAction="#clearFilter" text="Clear"/>
             </HBox>
         </VBox>
-        <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" HBox.hgrow="ALWAYS">
+        <VBox spacing="5.0" HBox.hgrow="ALWAYS">
             <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </padding>
             <Label text="Book Preview">
                 <font>
-                    <Font name="System Bold" size="24.0" />
+                    <Font name="System Bold" size="24.0"/>
                 </font>
             </Label>
-            <Separator prefWidth="200.0" />
-            <ScrollPane fx:id="previewPane" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS" />
+            <Separator prefWidth="200.0"/>
+            <ScrollPane fx:id="previewPane" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+            </ScrollPane>
         </VBox>
-        <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" HBox.hgrow="ALWAYS">
+        <VBox maxWidth="400.0" minWidth="-Infinity" prefWidth="262.0" spacing="5.0" HBox.hgrow="ALWAYS">
             <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </padding>
             <Label text="Book Selection">
                 <font>
-                    <Font name="System Bold" size="24.0" />
+                    <Font name="System Bold" size="24.0"/>
                 </font>
             </Label>
-            <Separator prefWidth="200.0" />
+            <Separator prefWidth="200.0"/>
             <Label text="Title">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <TextArea fx:id="selectionTitle" prefRowCount="2" promptText="Selected book's title" wrapText="true" VBox.vgrow="NEVER" />
-            <Separator opacity="0.0" prefWidth="200.0" />
+            <TextArea fx:id="selectionTitle" prefColumnCount="20" prefRowCount="2" promptText="Selected book's title"
+                      wrapText="true" VBox.vgrow="NEVER"/>
+            <Separator opacity="0.0" prefWidth="200.0"/>
             <Label text="Authors">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <ScrollPane fx:id="selectionAuthors" fitToWidth="true" VBox.vgrow="SOMETIMES">
+            <ScrollPane fx:id="authorSelectionPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
                 <Label text="Selected book's authors" textFill="LIGHTGRAY">
                     <padding>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
                     </padding>
                 </Label>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
             </ScrollPane>
-            <Separator layoutX="25.0" layoutY="133.0" opacity="0.0" prefWidth="200.0" />
+            <Separator layoutX="25.0" layoutY="133.0" opacity="0.0" prefWidth="200.0"/>
             <Label text="Publisher">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <TextField fx:id="selectionPublisher" editable="false" promptText="Selected book's publisher" />
-            <Separator layoutX="25.0" layoutY="258.0" opacity="0.0" prefWidth="200.0" />
+            <TextField fx:id="selectionPublisher" editable="false" promptText="Selected book's publisher"/>
+            <Separator layoutX="25.0" layoutY="258.0" opacity="0.0" prefWidth="200.0"/>
             <HBox spacing="10.0">
                 <Label text="Year">
                     <font>
-                        <Font size="16.0" />
+                        <Font size="16.0"/>
                     </font>
                 </Label>
-                <TextField fx:id="selectionYear" editable="false" promptText="Selected book's year" />
+                <TextField fx:id="selectionYear" editable="false" promptText="Selected book's year"/>
             </HBox>
-            <Separator layoutX="25.0" layoutY="322.0" opacity="0.0" prefWidth="200.0" />
+            <Separator layoutX="25.0" layoutY="322.0" opacity="0.0" prefWidth="200.0"/>
             <HBox spacing="10.0">
                 <Label text="Pages">
                     <font>
-                        <Font size="16.0" />
+                        <Font size="16.0"/>
                     </font>
                 </Label>
-                <TextField fx:id="selectionPages" editable="false" promptText="Selected book's pages" />
+                <TextField fx:id="selectionPages" editable="false" promptText="Selected book's pages"/>
             </HBox>
-            <Separator layoutX="25.0" layoutY="386.0" opacity="0.0" prefWidth="200.0" />
+            <Separator layoutX="25.0" layoutY="386.0" opacity="0.0" prefWidth="200.0"/>
             <Label text="Subfields">
                 <font>
-                    <Font size="16.0" />
+                    <Font size="16.0"/>
                 </font>
             </Label>
-            <ScrollPane fx:id="selectionSubfields" fitToWidth="true" VBox.vgrow="SOMETIMES">
+            <ScrollPane fx:id="subfieldSelectionPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
                 <Label text="Selected book's subfields" textFill="LIGHTGRAY">
                     <padding>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
                     </padding>
                 </Label>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
             </ScrollPane>
             <Separator prefWidth="200.0">
                 <VBox.margin>
-                    <Insets bottom="5.0" top="5.0" />
+                    <Insets bottom="5.0" top="5.0"/>
                 </VBox.margin>
             </Separator>
             <HBox spacing="15.0">
-                <Button mnemonicParsing="false" onAction="#updateSelection" text="Update" />
-                <Button mnemonicParsing="false" onAction="#deleteSelection" text="Delete" />
-                <Button mnemonicParsing="false" onAction="#addNew" text="New" />
+                <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateSelection" text="Update"/>
+                <Button mnemonicParsing="false" onAction="#deleteSelection" text="Delete"/>
+                <Button fx:id="createButton" mnemonicParsing="false" onAction="#addNew" text="New"/>
             </HBox>
         </VBox>
     </HBox>
