--- a/Client/src/main/resources/view.fxml
+++ b/Client/src/main/resources/view.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea"
-            xmlns:fx="http://javafx.com/fxml/1"
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea"
             fx:controller="de.mi.client.controller.Controller">
     <HBox alignment="CENTER" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0"
           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -153,11 +153,7 @@
                 </font>
             </Label>
             <Separator prefWidth="200.0"/>
-            <ScrollPane fx:id="previewPane" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
-                <padding>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                </padding>
-            </ScrollPane>
+            <ListView fx:id="bookView" VBox.vgrow="ALWAYS"/>
         </VBox>
         <VBox maxWidth="400.0" minWidth="-Infinity" prefWidth="262.0" spacing="5.0" HBox.hgrow="ALWAYS">
             <padding>
@@ -174,8 +170,8 @@
                     <Font size="16.0"/>
                 </font>
             </Label>
-            <TextArea fx:id="selectionTitle" prefColumnCount="20" prefRowCount="2" promptText="Selected book's title"
-                      wrapText="true" VBox.vgrow="NEVER">
+            <TextArea fx:id="selectionTitle" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="42.0"
+                      promptText="Selected book's title" wrapText="true" VBox.vgrow="NEVER">
                 <cursor>
                     <Cursor fx:constant="TEXT"/>
                 </cursor>
@@ -186,27 +182,25 @@
                     <Font size="16.0"/>
                 </font>
             </Label>
-            <ScrollPane fx:id="authorSelectionPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
-                <Label text="Selected book's authors" textFill="LIGHTGRAY">
-                    <padding>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
-                    </padding>
-                </Label>
+            <ScrollPane fx:id="selectionAuthorPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
                 <padding>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </padding>
             </ScrollPane>
             <Separator layoutX="25.0" layoutY="133.0" opacity="0.0" prefWidth="200.0"/>
-            <Label text="Publisher">
-                <font>
-                    <Font size="16.0"/>
-                </font>
-            </Label>
-            <TextField fx:id="selectionPublisher" editable="false" promptText="Selected book's publisher">
-                <cursor>
-                    <Cursor fx:constant="TEXT"/>
-                </cursor>
-            </TextField>
+            <HBox spacing="10.0">
+                <Label text="Publisher">
+                    <font>
+                        <Font size="16.0"/>
+                    </font>
+                </Label>
+                <TextField fx:id="selectionPublisher" editable="false" promptText="Selected book's publisher"
+                           HBox.hgrow="SOMETIMES">
+                    <cursor>
+                        <Cursor fx:constant="TEXT"/>
+                    </cursor>
+                </TextField>
+            </HBox>
             <Separator layoutX="25.0" layoutY="258.0" opacity="0.0" prefWidth="200.0"/>
             <HBox spacing="10.0">
                 <Label text="Year">
@@ -214,7 +208,7 @@
                         <Font size="16.0"/>
                     </font>
                 </Label>
-                <TextField fx:id="selectionYear" editable="false" promptText="Selected book's year">
+                <TextField fx:id="selectionYear" editable="false" prefWidth="135.0" promptText="Selected book's year">
                     <cursor>
                         <Cursor fx:constant="TEXT"/>
                     </cursor>
@@ -227,7 +221,7 @@
                         <Font size="16.0"/>
                     </font>
                 </Label>
-                <TextField fx:id="selectionPages" editable="false" promptText="Selected book's pages">
+                <TextField fx:id="selectionPages" editable="false" prefWidth="135.0" promptText="Selected book's pages">
                     <cursor>
                         <Cursor fx:constant="TEXT"/>
                     </cursor>
@@ -248,12 +242,7 @@
                     <Font size="16.0"/>
                 </font>
             </Label>
-            <ScrollPane fx:id="subfieldSelectionPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
-                <Label text="Selected book's subfields" textFill="LIGHTGRAY">
-                    <padding>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
-                    </padding>
-                </Label>
+            <ScrollPane fx:id="selectionSubfieldsPane" fitToWidth="true" VBox.vgrow="SOMETIMES">
                 <padding>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </padding>
